src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Sold__c</fullName>
        <label>Units Sold</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>